Update title page

--- a/Thesis/LaTeX/Layout/Titlepage.tex
+++ b/Thesis/LaTeX/Layout/Titlepage.tex
@@ -13,7 +13,7 @@
 	{\color{kuleuven1}{\Huge  A study on the impact of customer service chatbots on the telecom industry}}
 	
 	\vspace*{0.5cm}
-	{\Large A study focusing on the impact of a customer service chatbot on both business and customer side within the telecom industry.}
+	{\Large The impact of a customer service chatbot on both business and customer side within the telecom industry.}
 	
 	\begin{figure}[b]
 		%\centering
