Apply last feedback

--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -11,11 +11,11 @@ To determine the influence of chatbots on the telecom industry, various question
 Three research questions were formulated to answer this main research question:
 
 \subsubsection{RQ1: Are current chatbots effective in helping people and solving their problems?}
-It is illogical to think that there will be people who will keep a good impression of a chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \citep*{Muizzah2021, Brandtzaeg2018}.\
+It is illogical to think that there will be people who will keep a good impression of a chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \citep{Muizzah2021, Brandtzaeg2018}.\
 In a task-oriented chatbot, under which a chatbot can be placed, usefulness is key \citep{brandtzaeg2020}. Solving problems and providing help in an effective and efficient manner is the key to providing a good user experience. It is also crucial that the user's intentions are correctly interpreted and answered adequately.\\
 \break
 \citeauthor{Verkeyn2018} categorized 28 quality attributes and divided them up in 5 dimensions. Based on these quality attributes, the evaluation of a chatbot is possible (see \ref{ch:literature-study}. Literature Study). Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses.\\
-\break
+\pagebreak
 \break
 Related hypotheses:
 \begin{enumerate}
@@ -70,22 +70,27 @@ The joint survey in combination with the interviews will be used to generate the
 
 \subsection{Are these attributes present for the specific chatbot?}
 To find out if the selected attributes are present, several questions will be used to check with the clients using the chatbots. The used questions per hypothesis are listed below.
+\begin{table}[!h]
+	\resizebox{\textwidth}{!}{%
+		\begin{tabular}{|l|l|}
+			\hline
+			\textbf{H1} &
+			\begin{tabular}[c]{@{}l@{}}- Did the chatbot fulfil your task correctly?\\ - Was the chatbot unable to complete your task?\\ - Did the chatbot need help from a help desk agent to complete your task?\\ - Was the chatbot capable of completing the task on its own?\\ - Did the chatbot perform the task as you expected it to?\\ - Could you solve your problem/question after using the chatbot\end{tabular} \\ \hline
+			\textbf{H2} &
+			\begin{tabular}[c]{@{}l@{}}- Did the chatbot deliver a better quality of service than a human?\\ - The service provided by the human was of better quality?\end{tabular} \\ \hline
+			\textbf{H3} &
+			\begin{tabular}[c]{@{}l@{}}- Did the chatbot contain enough knowledge to help with your problem?\\ - The chatbot didn't know what he was talking about?\\ - Did the chatbot ask you relevant questions to gather the information to solve your task?\\ - The chatbot didn't know what he was talking about?\end{tabular} \\ \hline
+			\textbf{H4} &
+			\begin{tabular}[c]{@{}l@{}}- Was the chatbot easy to use?\\ - Did you have any difficulties using the chatbot?\end{tabular} \\ \hline
+			\textbf{H5} &
+			\begin{tabular}[c]{@{}l@{}}- Was the chatbot polite?\\ - Did the chatbot interact in a respectful way?\\ - Did you enjoy interacting with the chatbot?\\ - Was it a task to interact with the chatbot\end{tabular} \\ \hline
+		\end{tabular}%
+	}
+\caption{An overview of each hypothesis along with its respective question.}
+\label{tab:YNOverview}
+\end{table}
 
-\begin{longtable}{|l|l|}
-	\hline
-	\textbf{H1} & Did the chatbot fulfil your task correctly?                         \\ \hline
-	\endfirsthead
-	%
-	\endhead
-	%
-	\textbf{H2} & Does the chatbot deliver the same services as a human?              \\ \hline
-	\textbf{H3} & Did the chatbot contain enough knowledge to help with your problem? \\ \hline
-	\textbf{H4} & Was the chatbot easy to use?                                        \\ \hline
-	\textbf{H5} & Is the chatbot available at all times?                              \\ \hline
-	\textbf{H6} & Did you enjoy interacting with the chatbot?                         \\ \hline
-	\caption{An overview of each hypothesis along with its respective question.}
-	\label{tab:YNOverview}
-\end{longtable}
+
 \ul{Rating scale}\\
 For answering the statements, yes/no questions will be used to check the presence of these attributes.
 
@@ -128,14 +133,14 @@ The levels are as follows:
 This scale allows users to express how important a statement is.
 
 \subsubsection{Data Evaluation Method - Comparative Study}
-To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. KANO is a tool that can satisfy these desires. The KANO Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction \citep{KANO1984}. KANO offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Attractive, Performance, Must-Be, Indifferent, Reverse). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).\\
+To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. KANO is a tool that can satisfy these desires. The KANO Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction \citep{KANO1984}. KANO offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Attractive, Performance, Must-Be, Indifferent, Reverse). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).
 
 \begin{figure}[ht]
 	\includegraphics[scale=0.35]{../LaTeX/Figures/KANO.png}
 	\caption{Five categories of quality attributes \citep{KANO1984}.}
 	\label{fig:kano}
 \end{figure}
-\break
+
 The five categories are represented visually as in Figure \ref{fig:kano}, each category showing a different relationship.\\
 \break
 Attractive: if a quality attribute from this category is more present, the customer satisfaction will increase more than linearly. When the quality attribute is not present, the customer will have neither a positive nor negative customer satisfaction.\\
