--- a/Thesis/LaTeX/Research.tex
+++ b/Thesis/LaTeX/Research.tex
@@ -166,7 +166,7 @@ Telenet used to have two chatbots, AskHugo and AskPlay. AskHugo was a bot that t
 \break
 T-Mobile's\footnote{T-Mobile has merged with Tele2 since January 2019. The Tele2 brand has continued to exist and is now a part of T-Mobile. The management of Tele2's chatbot is also done by T-Mobile, these chatbots both use the same underlying system so both chatbots have the same operations.} chatbot can also guide the customer in choosing the right subscription or device. This way, T-Mobile tries to keep as much "trivial" work away from the physical agents, because the explicit purchase of a specific subscription/device is only done through them. Complaints are partly handled by the bot, it will ask if the customer has already spoken to an employee about this, if this has happened, then the chatbot will give the procedure to file a complaint.\\
 \break
-At the chatbot of KPN, in case of complaints, the customer is redirected to a live chat; the bot's only function here is to gather customer information. Selling products and services is not offered in the bot because that is not yet technically possible, the bot only serves as a proactive assistant, if the customer has been in the shop for a while, the bot will ask the customer if he/she needs help.\\
+At the chatbot of KPN, in case of complaints, the customer is redirected to a live chat; the bot's only function here is to gather customer information. Selling products and services is not offered in the bot because that is not yet technically possible, the bot only serves as a proactive assistant, if the customer has been in the shop for a while, the bot will ask if the customer needs help.\\
 \break
 \ul{Supported platforms}\\
 Telenet only offers its chatbot through Facebook Messenger, but this is integrated into their website and app. Communication through WhatsApp is also possible, but this is only an auto-reply system. In the bot of T-Mobile, there is a difference between the platforms, on the website all services are offered, but in the application the chatbot is mainly focused on questions about mobile services. The bot recognises if the customer asks a question about another service, he will then be redirected. KPN basically only offers their chatbot on their website, but in the app it is also available through a webview. If the customer then consults the chatbot in the app, this is actually the chatbot on the website.\\
@@ -317,47 +317,61 @@ All graphs will be presented as follows: Telenet on the left, Proximus in the mi
 \break
 Looking at how the chatbots performed when solving a task, both Telenet and Proximus seem to have a split customer base where around 50\% is happy and 50\% is not. When looking at the others, there is a clear happiness about how the chatbot performed (Figure \ref{fig:Q1}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q1.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q1.png}
 	\caption{Responses about the functional question for \acrshort{qa} 1, question 1.}\label{fig:Q1}
 \end{figure}
+\break
 Looking at the counter part of the previous question, there is even more discontent with Proximus. The results for Telenet and the others confirm the previous findings (Figure \ref{fig:DQ1}).
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ1.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ1.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 1.}\label{fig:DQ1}
 \end{figure}
 \break
 Looking at the results whether the chatbot needed help from an agent to complete it's task, there again is almost a 50-50 split for Telenet and Proximus whereas the others did better again (Figure \ref{fig:Q1b}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q1b.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q1b.png}
 	\caption{Responses about the functional question for \acrshort{qa} 1, question 2.}\label{fig:Q1b}
 \end{figure}
+\break
 The dysfunctional version of the previous question confirms these findings (Figure \ref{fig:DQ1b}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ1b.png}s
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ1b.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 2.}\label{fig:DQ1b}
 \end{figure}
 \break
 A third question to gauge the capabilities of the chatbot to execute the requested task was about the expectations of the chatbot and if it lived up to them. The results show that the chatbot mostly lived up to expectations, even though it could not solve the task it was given (Figure \ref{fig:Q1c}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q1c.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q1c.png}
 	\caption{Responses about the functional question for \acrshort{qa} 1, question 3.}\label{fig:Q1c}
 \end{figure}
+\break
 A fourth and final question asked if the user could solve the problem after interacting with the chatbot. For Proximus, there was some pushback but for Telenet and the others, the majority voted yes (Figure \ref{fig:DQ1c}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ1c.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ1c.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 4.}\label{fig:DQ1c}
 \end{figure}
+\break
+\break
 \break
 \ul{Attribute 2: Number of services}\\
 \break
 Attribute 2 looked at the services available and delivered by the chatbot in comparison to a human agent. The responses about whether a chatbot delivers a better service than a human agent were for both Telenet and the others an outstanding no whereas for Proximus, the votes were more divided, almost a 50-50 split (Figure \ref{fig:Q2}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q2.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q2.png}
 	\caption{Responses about the functional question for \acrshort{qa} 2.}\label{fig:Q2}
 \end{figure}
+\break
 When asked whether the service delivered by a human was of better quality, the responses for each group were almost always yes (Figure \ref{fig:DQ2}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ2.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ2.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 2.}\label{fig:DQ2}
 \end{figure}
 \break
@@ -365,36 +379,49 @@ When asked whether the service delivered by a human was of better quality, the r
 \break
 When presented with the question "Did the chatbot contain enough knowledge to help with your problem", the responses for each group differ a lot. For Telenet, there is a 50-50 split. Proximus on the other hand is mostly negative. This contrasts the others group where the responses were mainly positive (Figure \ref{fig:Q3}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q3.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q3.png}
 	\caption{Responses about the functional question for \acrshort{qa} 3, question 1.}\label{fig:Q3}
 \end{figure}
+\break
 When asking the inverse, the answers provided were more streamlined to be mostly negative. In other words, the chatbot knows what he is talking about (Figure \ref{fig:DQ3}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ3.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ3.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 3, question 1.}\label{fig:DQ3}
 \end{figure}
 \break
 The second question checks if the chatbot asked relevant questions to gather extra information about the problem. It measures if the chatbot can gather more information if the given context is not clear enough. Telenet and the others were mostly positive, Proximus has a 50-50 split (Figure \ref{fig:Q3b}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q3b.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q3b.png}
 	\caption{Responses about the functional question for \acrshort{qa} 3, question 2.}\label{fig:Q3b}
 \end{figure}
+\break
 When looking at the reverse, Telenet seemed to not ask the right questions whereas Proximus and the others were about evenly split (Figure \ref{fig:DQ3b}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ3.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ3.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 3, question 2.}\label{fig:DQ3b}
 \end{figure}
 \break 
+\break
+\break
+\break
+\break
 \ul{Attribute 4: Ease of use}\\
 \break
 There were not any complications when using any of the chatbots (Figure \ref{fig:Q4}).
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q4.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q4.png}
 	\caption{Responses about the functional question for \acrshort{qa} 4.}\label{fig:Q4}
 \end{figure}
+\break
 Looking at the dysfunctional version of this question, the values confirm what has been seen for Telenet and the others but dispute the result for Proximus. There seem to be some problems when using the Proximus chatbot (Figure \ref{fig:DQ4}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ4.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ4.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 4.}\label{fig:DQ4}
 \end{figure}
 \break
@@ -402,28 +429,31 @@ Looking at the dysfunctional version of this question, the values confirm what h
 \break
 The fifth attribute takes into consideration the interaction a user has with the chatbot. The first question asked if the chatbot was polite. The data shows that every group generally has a polite chatbot (Figure \ref{fig:Q5}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q5.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q5.png}
 	\caption{Responses about the functional question for \acrshort{qa} 5, question 1.}\label{fig:Q5}
 \end{figure}
-\break
 When asked if the chatbot interacted in a respectful way, the answers for Telenet were mostly positive, Proximus is once again divided around the 50\% mark and the others scored 100\% (Figure \ref{fig:DQ5}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ5.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ5.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 5, question 1.}\label{fig:DQ5}
 \end{figure}
 \break
 The second question asks if the user liked interacting with the chatbot. Telenet is evenly split and both Proximus and the others are mostly positive (Figure \ref{fig:Q5b}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q5b.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/Q5b.png}
 	\caption{Responses about the functional question for \acrshort{qa} 5, question 2.}\label{fig:Q5b}
 \end{figure}
 When asked the reverse, both Telenet and the others are divided evenly. Proximus has more negative than positive responses meaning, it wasn't a task to interact with their chatbot (Figure \ref{fig:DQ5b}).\\
 \begin{figure}[!htb]
-	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ5b.png}
+	\centering
+	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ5b.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 5, question 2.}\label{fig:DQ5b}
 \end{figure}
 \FloatBarrier
-
+\FloatBarrier
 \subsection{Importance Study - Kano}
 \subsubsection{Discrete analysis}
 To start with the KANO analysis, there first had to be made a clear mapping between the functional and dysfunctional question and which label of KANO would be assigned to the outcome of this mapping (see Figure \ref{fig:kanoOverview}).
@@ -438,7 +468,7 @@ Afterwards, for each scenario (section 3.3.3) as well as the general questions o
 An overview of the label assigned to each entry can be found in Figure \ref{fig:kanoTable}. S1, S2 and S3 refer to the 3 different scenarios.
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=\linewidth, scale=0.7]{../LaTeX/Figures/Kano/KanoTable.png}
+	\includegraphics[width=\linewidth]{../LaTeX/Figures/Kano/KanoTable.png}
 	\caption{Each entry with it's assigned KANO label.}
 	\label{fig:kanoTable}
 \end{figure}
@@ -446,13 +476,13 @@ An overview of the label assigned to each entry can be found in Figure \ref{fig:
 Now, each entry has a label assigned to it and for every entry, the different categories are counted. Based on this, both the satisfaction as well as the dissatisfaction coefficient can be calculated. The calculations can be seen in Figure \ref{fig:satisfactionCoef} and Figure \ref{fig:dissatisfactionCoef}.
 \begin{figure}[!htb]
 	\centering
-	\includegraphics{../LaTeX/Figures/Kano/SatisfactionCoef.png}
+	\includegraphics[width=120pt]{../LaTeX/Figures/Kano/SatisfactionCoef.png}
 	\caption{The satisfaction coefficient.}
 	\label{fig:satisfactionCoef}
 \end{figure}
 \begin{figure}[!htb]
 	\centering
-	\includegraphics{../LaTeX/Figures/Kano/DissatisfactionCoef.png}
+	\includegraphics[width=120pt]{../LaTeX/Figures/Kano/DissatisfactionCoef.png}
 	\caption{The dissatisfaction coefficient.}
 	\label{fig:dissatisfactionCoef}
 \end{figure}
@@ -460,7 +490,7 @@ Now, each entry has a label assigned to it and for every entry, the different ca
 After calculating both these scores for each entry, they were plotted in  a scatter plot, dividing them up into one of the four main categories of KANO. The categorisation can be found in Figure \ref{fig:satisfactionPlot}
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=\linewidth, scale=0.7]{../LaTeX/Figures/Kano/SatisfactionPlot.png}
+	\includegraphics[width=375pt]{../LaTeX/Figures/Kano/SatisfactionPlot.png}
 	\caption{The satisfaction/dissatisfaction plot.}
 	\label{fig:satisfactionPlot}
 \end{figure}
@@ -485,7 +515,8 @@ After calculating both these scores for each entry, they were plotted in  a scat
 	\caption{An Overview of the plotted entries in the satisfaction/dissatisfaction plot.}
 	\label{tab:kanoSatisfactionDissatisfactionTable}
 \end{longtable}
-
+\FloatBarrier
+\FloatBarrier
 \section{Discussion}
 \subsubsection{RQ1: Are current chatbots effective in helping people and
 	solving their problems?}
@@ -504,6 +535,7 @@ There seems to be a big split between the customers. Depending on the provider, 
 \subsubsection{RQ2: Are current chatbots easy to use and accessible?}
 \ul{H4: Current chatbots are easy to use.}\\
 In general, there does not seem to be a problem when using the chatbot.\\
+\break
 \break
 \ul{H5: Current chatbots are available at all times (24/7).}\\
 Each provider provides a chatbot that is available 24/7.\\
@@ -529,3 +561,4 @@ Customers are indifferent about the experience created by the chatbot. Comparing
 
 \subsection{The future vision of telecom chatbots}
 The interviews revealed how chatbots will evolve within the telecom sector and what the most important improvement points are. First and foremost, telecom providers are trying to optimise their services by applying data analysis and fine-tuning algorithms. Additionally, they are looking into sentiment analysis to map out the mood of the customer and to make the bots more language-compatible by means of \acrshort{api}s. As discussed earlier, chatbots are offered on different platforms, one thing  that was discussed several times was harmonising these different platforms so that the chatbot is aware of when the customer is communicating via another platform. In the long term, it can be expected that voice bots will also become more prevalent with possible integrations to smart speakers such as Google home and Alexa.
+\FloatBarrier
