--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -5,7 +5,7 @@
 \label{ch:literature-study}
 
 \section{What is a chatbot?}
-A chatbot is a computer software program which combines \acrshort{nlp}, \acrfull{nlu}, \acrfull{nlg}, \acrfull{ai} and \acrshort{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is called \acrfull{hci} which is most likely to become the most widely researched topic in the \acrshort{ai} community \citep*{Bansal2018,Adamopoulou2020}. Chatbots are used in a variety of sectors such as education, health and of course e-commerce.\\
+A chatbot is a computer software program which combines \acrshort{nlp}, \acrfull{nlu}, \acrfull{nlg}, \acrfull{ai} and \acrshort{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is called \acrfull{hci} which is most likely to become the most widely researched topic in the \acrshort{ai} community \citep{Bansal2018,Adamopoulou2020}. Chatbots are used in a variety of sectors such as education, health and of course e-commerce.\\
 \break
 The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” \citep{Lexico2022}. Some more technical definitions are:
 \begin{enumerate}
@@ -27,7 +27,7 @@ This categorisation is based on the internal architecture. Two types emerge: \te
 The domain category is about how broad the domain is in which the chatbot is used. \textbf{Domain specific} chatbots focus on \textbf{specific industries}. They have knowledge of the industry they are deployed in. On the other hand, \textbf{general domain} chatbots are created to support conversations in \textbf{open topics}. They do not support a specific domain. Instead, they are versatile and may be applied to any discipline \citep{Maroengsit2019}.
 
 \subsubsection{Platform}
-Chatbots can be divided up based on the platform on which they are active. \textbf{Social media} chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. \textbf{Web based} chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. \textbf{Standalone program} chatbots are installed as a separate program on the device of the user \citep{Maroengsit2019, Xu2017, CICBA2018}.
+Chatbots can be divided up based on the platform on which they are active. \textbf{Social media} chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. \textbf{Web based} chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. \textbf{Standalone program} chatbots are installed as a separate program on the device of the user \citep{CICBA2018, Maroengsit2019, Xu2017}.
 
 \subsubsection{Type of service provided}
 \textbf{Goal-based} chatbots have a \textbf{set goal} they want to reach, for example, a predefined goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. \textbf{Knowledge-based} chatbots are classified on \textbf{the knowledge they possess}. \textbf{Service-based} chatbots are divided on \textbf{the services they provide} to the customer. \textbf{Response-generated based} chatbots are classified on \textbf{what action it performs in response generation} \citep{Nuruzzaman2018}. It is possible that e.g., a goal-based chatbot can be a service-based or knowledge-based chatbot and vice versa.
@@ -50,41 +50,41 @@ The telecom sector is an industry where customer satisfaction is an important fa
 
 \subsection{The Belgian telecom industry: market overview}
 According to the survey conducted by Eurostat in 2019, the Belgian telecom sector is the most expensive in Europe \citep{Eurostat2020}.\\
-According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories (35.6\%, 26\%). There is also a 3rd player that has been growing in recent years, Orange with a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. \citep*{BIPT2021,VanLeemputten2021}.
+According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories (35.6\%, 26\%). There is also a 3rd player that has been growing in recent years, Orange with a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. \citep{BIPT2021,VanLeemputten2021}.
 
 \subsection{The Dutch telecom industry: market overview}
 Just like in Belgium, the Dutch telecom industry is one of the more expensive in Europe. In the 2019 annual report released by Eurostat, the Netherlands ranked 5th \citep{Eurostat2020}.\\
 In the Telecom Monitor report of the first quarter of 2021 \citep{Acm2021}, it can be deduced how the Dutch market is divided. In terms of mobile service, KPN and T-Mobile are among the market leaders, with respective market shares between 25\%-30\%. VodafoneZiggo follows with a share between 20\%-25\%. Furthermore, the market is completed by other \acrfull{mvno} that have a combined share between 15\%-20\%. \citep{Acm2021}\\
-The distribution is different for the fixed internet market, where VodafoneZiggo is market leader with a share of 40\%-45\%, followed by KPN (35\%-40\%). T-Mobile, which mainly focuses on mobile services, has a market share that barely lies between 5\%-10\%. The others fill the market (0\%-5\%).\citep{Acm2021}
+The distribution is different for the fixed internet market, where VodafoneZiggo is market leader with a share of 40\%-45\%, followed by KPN (35\%-40\%). T-Mobile, which mainly focuses on mobile services, has a market share that barely lies between 5\%-10\%. The others fill the market (0\%-5\%) \citep{Acm2021}.
 
 \subsection{Challenges in the telecom industry}
-Telecom operators in general face several challenges that can cause such companies to go bust. According to research by \citeauthor{Quintino2019}, the most important challenges in this sector are determining the revenue stream and rapidly changing consumer demands. The various challenges have an overall effect on customer retention. The findings from Quintino's research are also confirmed in Joshi's research \citep{Joshi2014}. In that paper, the parameters that affect the customer experience of cellular mobile services within the telecom industry of India are investigated \citep*{Joshi2014, Quintino2019, Malviya2012}.\\
+Telecom operators in general face several challenges that can cause such companies to go bust. According to research by \citeauthor{Quintino2019}, the most important challenges in this sector are determining the revenue stream and rapidly changing consumer demands. The various challenges have an overall effect on customer retention. The findings from Quintino's research are also confirmed in Joshi's research \citep{Joshi2014}. In that paper, the parameters that affect the customer experience of cellular mobile services within the telecom industry of India are investigated \citep{Joshi2014, Malviya2012, Quintino2019}.\\
 As in Quintino's study, this study will look at how the customer experience can be further optimised. The results from this study can be used by telecom providers to further adjust their services to the needs of their customers.
 
 \section{Key Attributes of a successful chatbot}
-Previous research \citep*{Muizzah2021, Verkeyn2018} has pointed out which characteristics are the most important for a successful chatbot. These characteristics can be grouped into key dimensions.
+Previous research \citep{Muizzah2021, Verkeyn2018} has pointed out which characteristics are the most important for a successful chatbot. These characteristics can be grouped into key dimensions.
 
 \subsubsection{Functionality}
-The most important attributes are the (flexible) interpretation and execution of the request, ability to maintain a discussion and the number of services available \citep*{Muizzah2021, Verkeyn2018}.
+The most important attributes are the (flexible) interpretation and execution of the request, ability to maintain a discussion and the number of services available \citep{Muizzah2021, Verkeyn2018}.
 
 \subsubsection{Trustworthiness}
-Trustworthiness refers to the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency \citep*{Muizzah2021, Verkeyn2018}.
+Trustworthiness refers to the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency \citep{Muizzah2021, Verkeyn2018}.
 
 \subsubsection{Safety / Intrusion}
-Safety is all about protection and the respect of privacy and making sure the user is safe from intrusion \citep*{Muizzah2021, Verkeyn2018}.
+Safety is all about protection and the respect of privacy and making sure the user is safe from intrusion \citep{Muizzah2021, Verkeyn2018}.
 
 \subsubsection{Efficiency}
-The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account \citep*{Muizzah2021, Verkeyn2018}.
+The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account \citep{Muizzah2021, Verkeyn2018}.
 
 \subsubsection{Graphical Appearance}
-Graphical Appearance is all about the design and feel of the \acrshort{ui} and the use of emojis and GIFs in conversations \citep*{Muizzah2021, Verkeyn2018}.
+Graphical Appearance is all about the design and feel of the \acrshort{ui} and the use of emojis and GIFs in conversations \citep{Muizzah2021, Verkeyn2018}.
 
 \subsubsection{Humanity \& Empathy}
 Humanity determines how human-like the chatbot is. These attributes are about how real the chatbot feels, if it creates an enjoyable interaction, conveys a personality and can read and respond to certain moods of the customer.\\
-Empathy is about personalised options and suggestions \citep*{Muizzah2021, Verkeyn2018}.
+Empathy is about personalised options and suggestions \citep{Muizzah2021, Verkeyn2018}.
 
 \subsubsection{Responsiveness}
-Responsiveness specifies the productivity and how fast the chatbot responds \citep*{Muizzah2021, Verkeyn2018}.\\
+Responsiveness specifies the productivity and how fast the chatbot responds \citep{Muizzah2021, Verkeyn2018}.\\
 \break
 By putting these 8 dimensions through \acrfull{ahp}, 7 main \acrshort{ahp} categories are found. \acrshort{ahp} is a structured approach for navigating complex decision-making processes that involve both qualitative and quantitative considerations \citep{Radziwil2021}. Table \ref{tab:ChatbotAttributes} lists the plausible attributes that give the highest user satisfaction score \citep{Muizzah2021}.\\
 
@@ -121,7 +121,7 @@ Chatbots provide support to customers in real-time and around the clock. It must
 \subsection{User’s perceptions of a chatbot}
 \ul{Talking with a technology-based system}\\
 According to the study of \citeauthor{Adam2021}, the interaction between the consumer and the system is social. The consumer will consider the chatbot as a social actor, even though it is known that it cannot show emotions \citep{Adam2021}. In this research it can be considered that the consumer will interact with a chatbot in the same way as another human \citep{Cheng2021,Ischen2020}.\\
-However, the study "Humanizing chatbots: The effects of visual, identity and conversational cues on humanness perceptions" proves otherwise. If an agent is known in advance as a chatbot, the user will biasedly evaluate whether the chatbot is of sufficient quality to meet their general expectations of machines. If the agent is marked as human, the user will evaluate the quality of the agent based on previous human interactions \citep*{Go2019,Shyam2008}.\\
+However, the study "Humanizing chatbots: The effects of visual, identity and conversational cues on humanness perceptions" proves otherwise. If an agent is known in advance as a chatbot, the user will biasedly evaluate whether the chatbot is of sufficient quality to meet their general expectations of machines. If the agent is marked as human, the user will evaluate the quality of the agent based on previous human interactions \citep{Go2019,Shyam2008}.\\
 \break
 \ul{Efficiency and effectiveness}\\
 The efficiency and effectiveness in performing a task is considered an important factor by consumers who are using a chatbot. The purpose of the chatbot is to make the user's life easier and more productive \citep{Brandtzaeg2018}.\\
@@ -136,36 +136,36 @@ The difficulty of a task given to the chatbot has a negative effect on consumer 
 This finding is confirmed by the research of \citeauthor{XU2020}, which concluded that users expect humans to solve complex tasks better than an \acrshort{ai} device. However, for tasks with low complexity, users expect that an \acrshort{ai} device could solve it better than humans. \citep{XU2020}\\
 \break
 \ul{Anthropomorphic visual cues}\\
-\gls{avc} can provide a certain "humanity factor" \citep{Shyam2008}, which will make the consumer consider the chatbot more human-like and subsequently interact more socially with it \citep*{Go2019,Gong2007,Kim2012, Nowak2004}.
-In addition, \citeauthor{Go2019,Koda1996,Wexelblat1998} found that if a user interacts with an agent who has the same characteristics as him/herself (homogeneity), the user will view the agent as positive. \citep*{Go2019,Koda1996,Wexelblat1998}.\\
+\gls{avc} can provide a certain "humanity factor" \citep{Shyam2008}, which will make the consumer consider the chatbot more human-like and subsequently interact more socially with it \citep{Go2019,Gong2007,Kim2012, Nowak2004}.
+In addition, \citeauthor{Go2019,Koda1996,Wexelblat1998} found that if a user interacts with an agent who has the same characteristics as him/herself (homogeneity), the user will view the agent as positive. \citep{Go2019,Koda1996,Wexelblat1998}.\\
 \break
-The study of \citeauthor{Go2019} shows that message interactivity contributes to compensating for low anthropomorphic visual cue, meaning that the interactivity of a chatbot is more important to users than the visual human characteristics \citep{Go2019}. Message interactivity in a conversation can be understood as the level of contingency in message exchange. In a conversation between two people, message interactivity means understanding another's message, as well as awareness of previous conversations. If these conditions are met, we can speak of an interactive and responsive conversation \citep*{Go2019,Sudweeks1998}.\\
+The study of \citeauthor{Go2019} shows that message interactivity contributes to compensating for low anthropomorphic visual cue, meaning that the interactivity of a chatbot is more important to users than the visual human characteristics \citep{Go2019}. Message interactivity in a conversation can be understood as the level of contingency in message exchange. In a conversation between two people, message interactivity means understanding another's message, as well as awareness of previous conversations. If these conditions are met, we can speak of an interactive and responsive conversation \citep{Go2019,Sudweeks1998}.\\
 \citeauthor{Sheehan2020} stated that chatbots with more human characteristics are more readily adopted and can be considered easier to use. \citep{Sheehan2020}
 
 \section{What makes users trust a chatbot?}
 Customer trust is a crucial factor in customer service, and it is important that the customer accepts the agent's feedback as qualitative information. Measuring customer trust in a chatbot has already been investigated by \citeauthor{Folstad2018}. That research provides insight into different aspects of consumer trust within customer service.
 
 \subsection{Interpretation of question}
-The fact that the chatbot may not be able to interpret the questions correctly is a possible threat to the qualitative handling of a problem/question. If the questions are misinterpreted, it is possible that the chatbot shares wrong information. According to past research, consumers are more skeptical about the response from a chatbot when asked a complex question \citep*{Folstad2018,Nordheim2019}.
+The fact that the chatbot may not be able to interpret the questions correctly is a possible threat to the qualitative handling of a problem/question. If the questions are misinterpreted, it is possible that the chatbot shares wrong information. According to past research, consumers are more skeptical about the response from a chatbot when asked a complex question \citep{Folstad2018,Nordheim2019}.
 
 \subsection{Self-presentation}
 A chatbot that reveals its weaknesses and limits is considered more trustworthy by consumers. The consumer gets a better idea of what may be asked and how confidential the information may be \citep{Folstad2018}.
 
 \subsection{Security and privacy}
 The consumer expects the chatbot to meet certain security levels, especially when the chatbot handles transactions that contain personal data. The user assumes that the service provider is responsible when the chatbot fails to support safe transactions.\\
-Since the existence of \acrfull{gdpr}, users' views on giving personal data to machines has changed. This transition is also noticeable in chatbots. Users of chatbots want to know what happens to their data and how it is stored. They expect as little personal data as possible to be stored \citep*{Folstad2018, Nordheim2019}. 
+Since the existence of \acrfull{gdpr}, users' views on giving personal data to machines has changed. This transition is also noticeable in chatbots. Users of chatbots want to know what happens to their data and how it is stored. They expect as little personal data as possible to be stored \citep{Folstad2018, Nordheim2019}. 
 
 \section{Issues and errors in the current generation of chatbots}
 Even though the usage of chatbots can bring forth significant advantages, they are not free of drawbacks and threats. Highlighted below are some critical issues every company should take into account.
 
 \subsection{Privacy and data security}
-Many users who interact with a chatbot are scared that their data is being captured and (mis)used. Providers should take the right precautionary measures to ensure the safety of data and to inform what the personal data will be used for. Otherwise, the usage of a chatbot could be negatively impacted \citep*{Adamopoulou2020, Duka2021, Rese2020}.
+Many users who interact with a chatbot are scared that their data is being captured and (mis)used. Providers should take the right precautionary measures to ensure the safety of data and to inform what the personal data will be used for. Otherwise, the usage of a chatbot could be negatively impacted \citep{Adamopoulou2020, Duka2021, Rese2020}.
 
 \subsection{Shortcomings of customer expectations}
 One of the biggest categories of mistakes are the shortcomings of customer expectations. This varies from failing to understand their request or intent, giving wrong answers, providing a poor quality of content as well as miscommunication errors. These issues leave a bad taste in the mouth of the customer and makes them not return to the chatbot of the company \citep{Adamopoulou2020, Duka2021, Nichifor2021, Sheehan2020, Margot}.
 
 \subsection{Bias}
-Bias can be shown towards multiple facets such as race, gender and religion. When taking a closer look at gender, it is interesting to see that the bias comes from both directions. Chatbots can make biased remarks towards its customers. At the same time, study shows that the customer applies gender bias towards gender identified chatbots in the field of gender-stereotypical subject domains such as mechanics for male chatbots. It is important to reduce the bias as much as possible for a smoother interaction between both parties \citep*{Adamopoulou2020, McDonnell2019}. Gender neutral bots seem to receive high satisfaction ratings in comparison to male and female chatbots, even though they are generally perceived with more negative personality traits such as colder and less friendly \citep{McDonnell2019}.
+Bias can be shown towards multiple facets such as race, gender and religion. When taking a closer look at gender, it is interesting to see that the bias comes from both directions. Chatbots can make biased remarks towards its customers. At the same time, study shows that the customer applies gender bias towards gender identified chatbots in the field of gender-stereotypical subject domains such as mechanics for male chatbots. It is important to reduce the bias as much as possible for a smoother interaction between both parties \citep{Adamopoulou2020, McDonnell2019}. Gender neutral bots seem to receive high satisfaction ratings in comparison to male and female chatbots, even though they are generally perceived with more negative personality traits such as colder and less friendly \citep{McDonnell2019}.
 
 \subsection{Toxic content and social harm}
 Toxic content is a severe drawback for customers. Getting insulted and racial slurs thrown at your head is the last thing a customer wants. This issue is mostly present with chatbots that use each conversation as a learning ground. Malicious users can fully impact and transform the vocabulary used by the chatbot in a matter of hours \citep{Adamopoulou2020}.\\
