Correct didn't and doesn't to did not and does not

--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -79,7 +79,7 @@ To find out if the selected attributes are present, several questions will be us
 			\textbf{H2} &
 			\begin{tabular}[c]{@{}l@{}}- Did the chatbot deliver a better quality of service than a human?\\ - The service provided by the human was of better quality?\end{tabular} \\ \hline
 			\textbf{H3} &
-			\begin{tabular}[c]{@{}l@{}}- Did the chatbot contain enough knowledge to help with your problem?\\ - The chatbot didn't know what he was talking about?\\ - Did the chatbot ask you relevant questions to gather the information to solve your task?\\ - The chatbot didn't know what he was talking about?\end{tabular} \\ \hline
+			\begin{tabular}[c]{@{}l@{}}- Did the chatbot contain enough knowledge to help with your problem?\\ - The chatbot did not know what he was talking about?\\ - Did the chatbot ask you relevant questions to gather the information to solve your task?\\ - The chatbot did not know what he was talking about?\end{tabular} \\ \hline
 			\textbf{H4} &
 			\begin{tabular}[c]{@{}l@{}}- Was the chatbot easy to use?\\ - Did you have any difficulties using the chatbot?\end{tabular} \\ \hline
 			\textbf{H5} &
