--- a/Thesis/LaTeX/Research.tex
+++ b/Thesis/LaTeX/Research.tex
@@ -88,7 +88,7 @@ Telenet has the most respondents, followed by Proximus. The other chatbot provid
 \end{figure}
 
 \subsubsection{Used language}
-Most users used Dutch as their preferred language of interaction which doesn't come as a surprise since this thesis focuses on the Flemish part of Belgium along with the Netherlands. Afterwards, English was the second most used language and French came last (see Figure \ref{fig:languagePlot} and \ref{fig:languageFreq}).
+Most users used Dutch as their preferred language of interaction which does not come as a surprise since this thesis focuses on the Flemish part of Belgium along with the Netherlands. Afterwards, English was the second most used language and French came last (see Figure \ref{fig:languagePlot} and \ref{fig:languageFreq}).
 
 \begin{figure}[!htb]
 	\minipage{0.69\textwidth}
