last review before handing in

--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -5,7 +5,7 @@
 \label{ch:literature-study}
 
 \section{What is a chatbot?}
-A chatbot is a computer software program which combines \acrshort{nlp}, \acrfull{nlu}, \acrfull{nlg}, \acrfull{ai} and \acrshort{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is called \acrfull{hci} which is most likely to become the most widely researched topic in the \acrshort{ai} community \citep{Bansal2018,Adamopoulou2020}. Chatbots are used in a variety of sectors such as education, health and of course e-commerce.\\
+A chatbot is a computer software program which combines \acrshort{nlp}, \acrfull{nlu}, \acrfull{nlg}, \acrshort{ai} and \acrshort{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is called \acrfull{hci} which is most likely to become the most widely researched topic in the \acrshort{ai} community \citep{Bansal2018,Adamopoulou2020}. Chatbots are used in a variety of sectors such as education, health and of course e-commerce.\\
 \break
 The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” \citep{Lexico2022}. Some more technical definitions are:
 \begin{enumerate}
@@ -53,7 +53,7 @@ According to the survey conducted by Eurostat in 2019, the Belgian telecom secto
 According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories (35.6\%, 26\%). There is also a 3rd player that has been growing in recent years, Orange with a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. \citep{BIPT2021,VanLeemputten2021}.
 
 \subsection{The Dutch telecom industry: market overview}
-Just like in Belgium, the Dutch telecom industry is one of the more expensive in Europe. In the 2019 annual report released by Eurostat, the Netherlands ranked 5th \citep{Eurostat2020}.\\
+Just like in Belgium, the Dutch telecom industry is one of the more expensive in Europe. In the 2019 annual report released by Eurostat, the Netherlands ranked fifth \citep{Eurostat2020}.\\
 In the Telecom Monitor report of the first quarter of 2021 \citep{Acm2021}, it can be deduced how the Dutch market is divided. In terms of mobile service, KPN and T-Mobile are among the market leaders, with respective market shares between 25\%-30\%. VodafoneZiggo follows with a share between 20\%-25\%. Furthermore, the market is completed by other \acrfull{mvno} that have a combined share between 15\%-20\%. \citep{Acm2021}\\
 The distribution is different for the fixed internet market, where VodafoneZiggo is market leader with a share of 40\%-45\%, followed by KPN (35\%-40\%). T-Mobile, which mainly focuses on mobile services, has a market share that barely lies between 5\%-10\%. The others fill the market (0\%-5\%) \citep{Acm2021}.
 
