--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -20,9 +20,9 @@ In a task-oriented chatbot, under which a chatbot can be placed, usefulness is k
 Related hypotheses:
 \begin{enumerate}
 	\setlength\itemsep{-0.1em}
-	\item H1: Current chatbots execute requested tasks correctly. Based on \citeauthor{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality” (\acrshort{qa} 1).
-	\item H2: Current chatbots can deliver the same services as a human agent. Based on \citeauthor{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality” (\acrshort{qa} 2).
-	\item H3: Current chatbots contain enough knowledge to provide good assistance. Based on \citeauthor{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” (\acrshort{qa} 3).
+	\item H1: Current chatbots execute requested tasks correctly. Based on \citeauthor{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality” \citep{Verkeyn2018} (\acrshort{qa} 1).
+	\item H2: Current chatbots can deliver the same services as a human agent. Based on \citeauthor{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality”  \citep{Eeuwen2017} (\acrshort{qa} 2).
+	\item H3: Current chatbots contain enough knowledge to provide good assistance. Based on \citeauthor{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” \citep{Cohen2016, Kuligowska2015} (\acrshort{qa} 3).
 \end{enumerate}
 
 \subsubsection{RQ2: Are current chatbots easy to use and accessible?}
@@ -32,8 +32,8 @@ When a chatbot is effective in helping people, but is so complex or unusable tha
 Related hypotheses:
 \begin{enumerate}
 	\setlength\itemsep{-0.1em}
-	\item H4: Current  chatbots are easy to use. Based on \citeauthor{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” (\acrshort{qa} 4).
-	\item H5: Current  chatbots are available at all times (24/7). Based on \citeauthor{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” (\acrshort{qa} 5).
+	\item H4: Current  chatbots are easy to use. Based on \citeauthor{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” \citep{Candela2018, Duijst2017} (\acrshort{qa} 4).
+	\item H5: Current  chatbots are available at all times (24/7). Based on \citeauthor{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” \citep{Wang2019} (\acrshort{qa} 5).
 \end{enumerate}
 
 \subsubsection{RQ3: Do current chatbots create a pleasant customer experience?}
@@ -154,7 +154,7 @@ Must-Be: The customer considers this kind of quality attribute as necessary, whe
 Reverse: The more these quality attributes are present, the worse the customer satisfaction. The customer satisfaction increases when they are less present.
 
 \subsection{Survey arrangement}
-The survey is divided up into 3 parts:\\
+The survey is divided up into three parts:\\
 \break
 \ul{Part 1 - general information about the participant and information on the interaction with the chatbot}\\
 \break
@@ -170,7 +170,7 @@ The second part focuses on the interaction with the chatbot, the questions that 
 \break
 The final part of the survey asks what the customer expects from customer service chatbot in various scenarios. In order to put the participant in a certain context, three different scenarios were created in which a customer might find himself with the corresponding telecom services. The three scenarios are as follows:
 \begin{enumerate}
-	\item You have not switched off your phone in a while and it  ran out of battery. You have a problem because you do not remember your PIN code. You ask the chatbot if he can retrieve your PIN code given your client details. 
+	\item You have not switched off your phone in a while and it  ran out of battery. You have a problem because you do not remember your \acrfull{pin} code. You ask the chatbot if he can retrieve your \acrshort{pin} code given your client details. 
 	\item You are not happy with your subscription because it does not match your needs, from a friend you have heard there is a better deal so you want the chatbot to stop your subscription.
 	\item At least once each month, you lose internet connectivity. You are tired of these problems and you want to file a complaint. You turn to the chatbot of your telecom provider with your complaint.
 \end{enumerate}
