--- a/Thesis/LaTeX/Research.tex
+++ b/Thesis/LaTeX/Research.tex
@@ -6,7 +6,7 @@
 \section{Analysis}
 The whole data set and data analysis script can be found on the GitHub repository\footnote{https://github.com/MoutPessemier/A-Survey-On-The-Impact-of-Customer-Chatbots-on-E-commerce}.\\
 \break
-The data has been anonymised in Excel. A new column was created called 'taskCategory'. The tasks performed are categorised in one of the following 4 categories:
+The data has been anonymised in Excel. A new column was created called 'taskCategory'. The tasks performed are categorised in one of the following four categories:
 \begin{itemize}
 	\setlength\itemsep{-0.1em}
 	\item FAQ
@@ -14,12 +14,12 @@ The data has been anonymised in Excel. A new column was created called 'taskCate
 	\item Complaint
 	\item Sales
 \end{itemize}
-From the 65 entries, 5 had to be thrown away:
+From the 65 entries, five had to be thrown away:
 \begin{itemize}
 	\setlength\itemsep{-0.1em}
-	\item 3 because of the used chatbot: they were not telecom chatbots.
-	\item 1 entry was a duplicate.
-	\item 1 entry responded with one answer only (only yes and only neutral in part 2)
+	\item Three because of the used chatbot: they were not telecom chatbots.
+	\item One entry was a duplicate.
+	\item One entry responded with one answer only (only yes and only neutral in part 2)
 \end{itemize}
 
 \subsection{Environment Variables}
@@ -34,7 +34,7 @@ The mean and standard deviation values for each provider respectively are:
 	\item T-Mobile: 22.44 \& 2.01
 	\item KPN: 27.75 \& 3.59
 \end{itemize}
-Next to the plot, there is a frequency table that shows the different values for age appearing in this survey, ordered from most common to least common.
+Next to the plot, there is a frequency table that shows the different values for age appearing in this survey, ordered from most common to least common (Figure \ref{fig:agePlot} and \ref{fig:ageFreq}).
 
 \begin{figure}[!htb]
 	\minipage{0.75\textwidth}
@@ -193,7 +193,7 @@ For every bot except Telenet, the yes/no questions are supported. The treatment 
 			\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Supported\\ services\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Retrieve pincode\\ - Outstanding\\ invoice amount\\ - Retrieve status\\ of your subscription\\ and services\end{tabular}} &
 			\multicolumn{1}{l|}{- Only support} &
-			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Retrieve customer\\ information (client\\ number, puk code\\ , etc.)\\ -Adjust personal\\ settings (e.g.\\ deactivate extra\\ costs if a service \\ number calls)\\ - Buy add-ons (e.g.\\ mobile data bundle)\\  - Manages \\ workforce of agents\end{tabular}} &
+			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Retrieve customer\\ information (client\\ number, \acrshort{puk} code\\ , etc.)\\ -Adjust personal\\ settings (e.g.\\ deactivate extra\\ costs if a service \\ number calls)\\ - Buy add-ons (e.g.\\ mobile data bundle)\\  - Manages \\ workforce of agents\end{tabular}} &
 			\begin{tabular}[c]{@{}l@{}}- Preparer for\\ agents (making\\ their conversation\\ shorter)\\ - Guide to lead\\ customer to right\\ place on website\end{tabular} \\ \hline
 			\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Reduction of\\ employee\\ workload\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}No data because of\\ confidential \\ information\end{tabular}} &
@@ -231,7 +231,7 @@ In the bot of Telenet, the reason why the remaining 35\% drop out is explained b
 \break
 T-Mobile asks their customers for feedback after a conversation with a chatbot. Analyses showed that the majority of responses ultimately had to call an agent to solve their problem. What T-Mobile also does to gain more insight into their customers is to work with personas. These are linked to possible customer profiles where they map out the corresponding requirements of the customer.\\ 
 \break
-At KPN, the number of direct calls (telephone) to a physical agent would be up higher, to an order of about 10, than with the chatbot. This means that there are 10 times more calls than chats.\\
+At KPN, the number of direct calls (telephone) to a physical agent would be up higher, to an order of about ten, than with the chatbot. This means that there are ten times more calls than chats.\\
 \break
 \ul{Negative influences}\\
 Proximus sees mainly negative influences in the form of customers who are frustrated. The frustration arises when the chatbot does not understand the customer properly and goes the wrong way, this demotivates the customer to reuse the bot. Customers who are already frustrated by services that do not work properly should be taken into account, if these customers then come into contact with a chatbot it will not help their mood.\\
@@ -354,7 +354,7 @@ A fourth and final question asked if the user could solve the problem after inte
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=375pt]{../LaTeX/Figures/Comparative/DQ1c.png}
-	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 4.}\label{fig:DQ1c}
+	\caption{Responses about the functional question for \acrshort{qa} 1, question 4.}\label{fig:DQ1c}
 \end{figure}
 \break
 \break
